--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/arc?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
