authentication is remodified

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,8 @@ logging.level.org.springframework.web=INFO
 basic.frontendUrl=http://localhost:4000/frontend
 basic.evnName=dev
 basic.isEnabled=true
+
+#kafka setting
+spring.kafka.consumer.group-id=kafka-intro
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.topic.test=test
