--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,3 +10,7 @@ logging.level.org.springframework.web=INFO
 basic.frontendUrl=http://13.28.34.34:4000/frontend
 basic.evnName=prod
 basic.isEnabled=true
+
+spring.kafka.consumer.group-id=kafka-intro
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.topic.test=test
