--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,23 @@
 			<version>${spring-kafka.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>2.0.8.RELEASE</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
