--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,15 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
+			<!--<version>2.1.1.RELEASE</version>-->
+		<!--</dependency>-->
+
+
+
 
 
 
