Kafka: sender and receiver applied

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,4 +14,4 @@ basic.isEnabled=true
 #kafka setting
 spring.kafka.consumer.group-id=kafka-intro
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.topic.test=test
+spring.kafka.topic.test=TestTopicXYZ
