Kafka: adding multiple broker

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,5 +13,5 @@ basic.isEnabled=true
 
 #kafka setting
 spring.kafka.consumer.group-id=kafka-intro
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:9092,localhost:9093
 spring.kafka.topic.test=TestTopicXYZ
