--- a/src/main/resources/application-stag.properties
+++ b/src/main/resources/application-stag.properties
@@ -12,5 +12,5 @@ basic.evnName=stag
 basic.isEnabled=true
 
 spring.kafka.consumer.group-id=kafka-intro
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:9092,localhost:9093
 spring.kafka.topic.test=test
